  - Zero load time. That is, data required for matching is now computed 
"on-demand", which means the load time for any project should now be 
under a minute in most cases.

----------------------------------------------------------------------
 OmegaT 1.8.0 update 2 Changes
----------------------------------------------------------------------
1.8.0 update 2 vs. 1.8.0 update 1


   2 Enhancements
   4 Bugfixes
----------------------------------------------------------------------
1.8.0 update 2

  Other enhancements:
  - Spellchecking dialogs now have a title
  - Catalan localisation updated to 1.8 (UI)

  Bug fixes:
  
  - Spellchecking dialogs not dismissable with [esc]
  http://sourceforge.net/support/tracker.php?aid=1815506
  - Wrong Import file dialog title
  http://sourceforge.net/support/tracker.php?aid=1940081 
  - Hunspell not working on Linux 64-bit
  - Non-ascii char badly handled in hunspell lib loading on OS-X
  http://sourceforge.net/support/tracker.php?aid=1862199  


----------------------------------------------------------------------
 OmegaT 1.8.0 update 1 Changes
----------------------------------------------------------------------
1.8.0 update 1 vs. 1.8.0


   3 Enhancements
   0 Bugfix

----------------------------------------------------------------------
1.8.0 update 1

  Other enhancements:
  - Albanian localisation updated to 1.8 (UI, readme)
  - Belarusian localisation updated to 1.8 (UI)
  - New Portuguese (Portugal) localisation (UI)

----------------------------------------------------------------------
 OmegaT 1.8.0 Changes
----------------------------------------------------------------------

1.8.0 vs. 1.7.3 update 3


  15 Enhancements
   3 Bugfixes

----------------------------------------------------------------------
1.8.0

  Implemented requests:
  
  - Editor window name
  http://sourceforge.net/support/tracker.php?aid=1764103

  - Tool: Spellchecker
  http://sourceforge.net/support/tracker.php?aid=991510 
